wecp initial commit

--- a/frontend/src/app/ipl/components/teamcreate/teamcreate.component.html
+++ b/frontend/src/app/ipl/components/teamcreate/teamcreate.component.html
@@ -1,4 +1,4 @@
-<div class="team-form-container"></div>
+<div class="team-form-container">
   <form [formGroup]="teamForm" (ngSubmit)="onSubmit()">
     <div>
       <label for="teamId">Team ID:</label>
@@ -51,3 +51,5 @@
     <p>{{ errorMessage }}</p>
   </div>
 </div>
+ 
+ 
